<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <!-- Simple strings. -->
    <string name="skeleton_app">Photo Geolocator</string>
    <string name="update">Update</string>
    <string name="back">Exit</string>
    <string name="device">Device</string>
    <string name="unavailable">Unavailable</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="bearing">Bearing</string>
    <string name="accuracy">Accuracy</string>
    <string name="meters">meters</string>
    <string name="eastDegrees">degrees</string>

    <string name="fileSelection">File selection:</string>
    <string name="gallery">Gallery</string>
    <string name="explorer">Explorer</string>
    <string name="flashMode">Flash mode:</string>
    <string name="never">Never</string>
    <string name="allways">Allways</string>
    <string name="auto">Auto</string>
    <string name="resolution">Resolution</string>
    <string name="resolutionHigh">High</string>
    <string name="resolutionLow">Low</string>
    <string name="mapMode">Map mode:</string>
    <string name="map">Map</string>
    <string name="satellite">Satellite</string>
    <string name="exifRational">Decimal data:</string>
    <string name="rationalEnabled">Enabled (better precission)</string>
    <string name="rationalDisabled">Disabled (better compatibility)</string>
    <string name="exifMapDatum">Geodetic survey data:</string>
    <string name="datumDisabled">Do not set</string>
    <string name="datumWGS84">WGS-84</string>
    <string name="datumTOKYO">TOKYO</string>

    <string name="viewThumbs">View thumbnails</string>

    <string name="version">Version</string>
    <string name="betaTestTeam">Beta-test team:</string>
    <string name="thisAppUsesLibrary">This applicaton make use of the library</string>
    <string name="aboutText">This is a free (as in freedom) application and ad-free, if you like it and you find it useful you can contribute in many ways; reporting bugs, requesting enhacements, translating for other languages (currently spanish, catalan, english, germany and italian), testing the app in other devices... Please visit http://code.google.com/p/photogeolocator for more information or send me an e-mail to mario@oiram.com. ¡Thanks to all for your help!</string>
    <string name="takingPicture">Taking picture, please wait...</string>
    <string name="pictureTaken">Picture has been geotagged</string>

    <string name="gpsUnavailable">GPS not available</string>
    <string name="noGpsInfo">Picture doesn\'t contain geographic information</string>
    <string name="npeException">Error: no selection. Please help us reporting this error!</string>
    <string name="retrievingAddress">Retrieving address...</string>
    <string name="confirmOverwrite">Confirm overwrite</string>
    <string name="willOverwrite">Selected image will be overwritten with current map location</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="noDigitalCameraImage">This picture wasn\'t taken with a digital camera.</string>
    <string name="showImageLocation">Show picture location</string>
    <string name="setImageLocation">Set picture location</string>
    <string name="takePicture">Take picture</string>
    <string name="preferences">Preferences</string>
    <string name="about">About...</string>

    <string name="syncLocation">Use GPS location</string>
</resources>

