<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" >
    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fileSelection"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radio_red"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/gallery" />

        <RadioButton android:id="@+id/radio_blue"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/explorer" />

    </RadioGroup>

    <TextView
        android:id="@+id/label2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/flashMode"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:id="@+id/radio_nunca"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/never" />

        <RadioButton android:id="@+id/radio_siempre"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/allways" />

        <RadioButton android:id="@+id/radio_auto"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/auto" />

    </RadioGroup>

</LinearLayout>
